# insPyred_print

./: MANIFEST  Pipfile  pyproject.toml  setup.cfg  setup.py
examples/: Demo_Welcome_Blink.py
insPyred_print.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
inspyred_print/: __init__.py  version.py
