[tool.poetry]
name = "inspyred_print"
version = "1.1"
description = "A collection of ascii codes to make your visible strings prettier."
authors = ["Taylor B. <43686206+tayjaybabee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pypattyrn = "^1.2"
toml = "^0.10.2"
importlib-metadata = {version = "^1.0", python = ">3.8"}
lastversion = "^2.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
